# polars-fastapi-svelte

./: .clinerules  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AUDIT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKERIZATION_PLAN.md  DOCKERIZATION_SUMMARY.md  Dockerfile  ENV_VARIABLES.md  FEATURES.md  Justfile  README.md  STYLE_GUIDE.md  bugs.md  docker-compose.yml  pytest_fixtures.py  refactoring candidates.md  session-ses_2909.md  test_support_runtime_compute.py
._github/: copilot-instructions.md
.claude/: README.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  docs.instructions.md  fast-api.instructions.md  svelte.instructions.md
.opencode/: .gitignore  opencode.jsonc
.ralph/: ralph-history.json  ralph-loop.state.json
backend/: .env.example  .prod.env.example  README.md  app.py  e2e.env  main.py  process_test.py  prod.env  pyproject.toml  scheduler.py  worker.py
backend/api/v1/: router.py
backend/config/: warning-allowlist.json
backend/core/: __init__.py  config.py  database.py  error_handlers.py  exceptions.py  logging.py  migrations.py  namespace.py  proxy.py  validation.py
backend/database/: README.md
backend/database/alembic/: env.py
backend/database/alembic/versions/: 0003_runtime_tenant_initial.py  2c1d3ab4f1b2_add_lineage_schedules.py  7f3c2a1b9e10_add_analysis_versions_and_datasource_lineage.py  8b1c9d2f1a3e_add_healthchecks_and_engine_run_progress.py  8bb6b6a8f0c3_add_udfs_table.py  9f2d6b4e3c1a_add_healthcheck_critical.py  b7d4e1f9a2c3_drop_locks_table.py  cd818acda9c7_init_libsql.py  f3a9c1d2b4e5_add_engine_runs.py
backend/modules/ai/: __init__.py  routes.py  service.py
backend/modules/analysis/: __init__.py  builtin_templates.json  models.py  pipeline_types.py  routes.py  schemas.py  service.py  step_schemas.py  step_types.py  templates.py
backend/modules/analysis_versions/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
backend/modules/build_jobs/: service.py
backend/modules/build_runs/: __init__.py  models.py  service.py
backend/modules/chat/: openrouter.py  routes.py  sessions.py  tool_contract.py
backend/modules/compute/: EXAMPLES.py  README.md  __init__.py  engine.py  engine_live.py  iceberg_reader.py  live.py  manager.py  monitor.py  polars_functions.py  routes.py  schemas.py  service.py  step_converter.py  utils.py
backend/modules/compute/core/: __init__.py  base.py  exports.py
backend/modules/compute/operations/: __init__.py  _validation.py  ai.py  base.py  datasource.py  deduplicate.py  download.py  drop.py  explode.py  export.py  expression.py  fill_null.py  filter.py  groupby.py  join.py  limit.py  notification.py  null_count.py  pivot.py  plot.py  rename.py  sample.py  select.py  simple.py  sort.py  strings.py  timeseries.py  topk.py  union.py  unpivot.py  value_counts.py  view.py  with_columns.py
backend/modules/compute/registries/: __init__.py  aggregations.py  datasources.py  exports.py  fill_strategies.py  operators.py  strings.py  timeseries.py  types.py
backend/modules/config/: routes.py
backend/modules/datasource/: __init__.py  models.py  preflight.py  routes.py  schemas.py  service.py  service_lineage.py  source_types.py
backend/modules/engine_instances/: models.py  service.py
backend/modules/engine_runs/: __init__.py  models.py  routes.py  schemas.py  service.py  watchers.py
backend/modules/export/: generators.py  service.py
backend/modules/health/: models.py  routes.py
backend/modules/healthcheck/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/locks/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/logs/: routes.py  schemas.py
backend/modules/mcp/: __init__.py  decorators.py  executor.py  registry.py  router.py  routes.py  validation.py
backend/modules/namespaces/: routes.py
backend/modules/notification/: service.py
backend/modules/results/: __init__.py  routes.py  schemas.py  service.py
backend/modules/runtime/: ipc.py  process.py  scheduler.py  worker.py
backend/modules/runtime_overview/: service.py
backend/modules/runtime_workers/: service.py
backend/modules/scheduler/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/modules/settings/: models.py  routes.py  schemas.py  service.py
backend/modules/telegram/: bot.py  routes.py  service.py
backend/modules/udf/: __init__.py  models.py  routes.py  schemas.py  seed.py  service.py
backend/scripts/: __init__.py  generate_ts_build_stream_types.py  generate_ts_step_types.py  run_e2e_harness.py  scan_warnings.py
backend/tests/: conftest.py  postgres_harness.py  test_ai.py  test_analysis.py  test_analysis_execute_pipeline.py  test_analysis_export_code.py  test_analysis_extended.py  test_analysis_preview_pipeline.py  test_analysis_versions.py  test_auth.py  test_build_comparison.py  test_build_runs.py  test_chat.py  test_compute.py  test_compute_monitor.py  test_compute_schemas.py  test_core_config.py  test_core_exceptions.py  test_datasource.py  test_datasource_compare.py  test_datasource_extended.py  test_docker_bootstrap.py  test_engine_runs.py  test_fixes.py  test_health.py  test_healthchecks.py  test_iceberg_build_modes.py  test_iceberg_snapshot_reader.py  test_lineage.py  test_locks.py  test_main.py  test_mcp.py  test_migrations.py  test_namespace.py  test_notification.py  test_operation_helpers.py  test_operations.py  test_output_datasource.py  test_performance_baseline.py  test_pipeline_disabled_steps.py  (+13 more)
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  ENV_VARIABLES.md  FEATURES.md  PRD.md  README.md  Taskfile.md  architecture.excalidraw  backlog.md  bugs.md  chart-enrichment-plan.md  compute-refactor-plan.md  css-var-migration-taskfile.md  datasource-preview-plan.md  mobile-design-concept.html  performance-baseline.md  pipeline-compute.md  (+3 more)
(+525 files in other folders)
