[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn",
    "fastapi",
    "pydantic>=2.0",
    "pydantic-settings",
    "pytest",
    "httpx",
    "requests",
    "ruff>=0.14.7",
    "polars",
    "duckdb",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "coverage>=7.0.0",
    "ruff>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "modules", "core"]

# [tool.hatch.build.targets.sdist]
# include = ["api", "modules", "core", "main.py", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 140
indent-width = 4

exclude = [
    ".bzr",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "dist",
    ".*venv",
    "setup.py",
    "*_pb2*.py",
]


[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "D",   # pydocstyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E203",   # whitespace before ",", ";", or ":"
    "D100",
    "D101",
    "D102",   # Missing docstring in public method
    "D103",
    "D104",   # Disable package and module docstrings
    "D105",
    "D106",
    "D107",
    "D205",   # 1 blank line required between summary line and description
    "D212",   # Multi-line docstring summary should start at the first line
    "UP045",
    "N812",   # Imports as uppercase (e.g., functions as F)
    "COM812", # Missing trailing comma
    "RET504", # Unnecessary assignment to `df` before `return` statement
    "RUF100", # Unused `noqa` directive (unknown: `E814`) - not aligned with Foundry's checks
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends pattern is standard)
    "B904",   # Within except clause, raise with from err or from None (handled in routes)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: mark test as async",
]
